# cmake_lib_example

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
include/: sharedcpplibexample.h
src/: sharedcpplibexample.cpp
